fix spacing on edit profile @ media 520

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -35,6 +35,7 @@
 
 .modal__title {
   font-size: 32px;
+  font-weight: 500;
   color: rgba(33, 33, 33, 1);
   margin: 0 0 32px;
 }
@@ -82,6 +83,9 @@
   padding: 16px 0 16px 12px;
   margin-bottom: 32px;
 }
+.modal__input:hover {
+  border: 1px solid #000000;
+}
 
 .modal__input::placeholder {
   font-size: 20px;
@@ -110,15 +114,21 @@
   }
 }
 
-@media screen and (max-width: 540px) and (min-width: 300px) {
+@media screen and (max-width: 540px) and (min-width: 200px) {
   .modal__container {
     min-width: 300px;
     width: 90%;
-    padding: 32px 20px;
+    padding: 12px 12px;
   }
   .modal__title {
     font-size: 20px;
+    margin: 10px 0;
   }
+
+  .modal__close-img {
+    margin-bottom: 24px;
+  }
+
   .modal__form {
     min-width: 200px;
     font-size: 16px;
